--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://navinkumar-classic.github.io/My_Website/",
+  "homepage": "https://navinkumar-classic.github.io/My_Website/#",
   "name": "hh",
   "version": "0.1.0",
   "private": false,
